// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`CheckoutForm functionality tests CheckoutForm - cart empty - test 1`] = `
<div>
  <form
    class="space-y-6"
    data-testid="checkout-form"
  >
    <div
      class="space-y-4"
    >
      <h3
        class="text-lg font-semibold"
      >
        Payment Information
      </h3>
      <p
        class="text-sm text-slate-600"
      >
        You will be redirected to Stripe to securely complete your payment.
      </p>
    </div>
    <div
      class="border-t pt-4"
    >
      <div
        class="gap-2 flex flex-row items-start space-x-3 space-y-0"
        data-slot="form-item"
      >
        <button
          aria-checked="false"
          aria-describedby="_r_0_-form-item-description"
          aria-invalid="false"
          class="peer border-input dark:bg-input/30 data-[state=checked]:bg-primary data-[state=checked]:text-primary-foreground dark:data-[state=checked]:bg-primary data-[state=checked]:border-primary focus-visible:border-ring focus-visible:ring-ring/50 aria-invalid:ring-destructive/20 dark:aria-invalid:ring-destructive/40 aria-invalid:border-destructive size-4 shrink-0 rounded-[4px] border shadow-xs transition-shadow outline-none focus-visible:ring-[3px] disabled:cursor-not-allowed disabled:opacity-50"
          data-slot="form-control"
          data-state="unchecked"
          data-testid="terms-checkbox"
          id="_r_0_-form-item"
          role="checkbox"
          type="button"
          value="on"
        >
          <div
            data-testid="mock-react-presence"
          >
            <span
              class="grid place-content-center text-current transition-none"
              data-slot="checkbox-indicator"
              data-state="unchecked"
              style="pointer-events: none;"
            >
              <svg
                aria-hidden="true"
                class="lucide lucide-check size-3.5"
                fill="none"
                height="24"
                stroke="currentColor"
                stroke-linecap="round"
                stroke-linejoin="round"
                stroke-width="2"
                viewBox="0 0 24 24"
                width="24"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M20 6 9 17l-5-5"
                />
              </svg>
            </span>
          </div>
        </button>
        <input
          aria-hidden="true"
          style="position: absolute; pointer-events: none; opacity: 0; margin: 0px; transform: translateX(-100%); width: 0px; height: 0px;"
          tabindex="-1"
          type="checkbox"
          value="on"
        />
        <div
          class="space-y-1 leading-none"
        >
          <label
            class="flex items-center gap-2 text-sm leading-none font-medium select-none group-data-[disabled=true]:pointer-events-none group-data-[disabled=true]:opacity-50 peer-disabled:cursor-not-allowed peer-disabled:opacity-50 data-[error=true]:text-destructive"
            data-error="false"
            data-slot="form-label"
            for="_r_0_-form-item"
          >
            I agree to the terms and conditions
          </label>
        </div>
      </div>
    </div>
    <button
      class="inline-flex items-center justify-center gap-2 whitespace-nowrap rounded-md text-sm font-medium transition-all disabled:pointer-events-none disabled:opacity-50 [&_svg]:pointer-events-none [&_svg:not([class*='size-'])]:size-4 shrink-0 [&_svg]:shrink-0 outline-none focus-visible:border-ring focus-visible:ring-ring/50 focus-visible:ring-[3px] aria-invalid:ring-destructive/20 dark:aria-invalid:ring-destructive/40 aria-invalid:border-destructive bg-primary text-primary-foreground hover:bg-primary/90 h-9 px-4 py-2 has-[>svg]:px-3 w-full cursor-pointer"
      data-slot="button"
      data-testid="proceed-to-payment-btn"
      disabled=""
      type="submit"
    >
      Proceed to Payment
    </button>
  </form>
</div>
`;

exports[`CheckoutForm functionality tests CheckoutForm - cart with items - test 1`] = `
<div>
  <form
    class="space-y-6"
    data-testid="checkout-form"
  >
    <div
      class="space-y-4"
    >
      <h3
        class="text-lg font-semibold"
      >
        Payment Information
      </h3>
      <p
        class="text-sm text-slate-600"
      >
        You will be redirected to Stripe to securely complete your payment.
      </p>
    </div>
    <div
      class="border-t pt-4"
    >
      <div
        class="gap-2 flex flex-row items-start space-x-3 space-y-0"
        data-slot="form-item"
      >
        <button
          aria-checked="false"
          aria-describedby="_r_1_-form-item-description"
          aria-invalid="false"
          class="peer border-input dark:bg-input/30 data-[state=checked]:bg-primary data-[state=checked]:text-primary-foreground dark:data-[state=checked]:bg-primary data-[state=checked]:border-primary focus-visible:border-ring focus-visible:ring-ring/50 aria-invalid:ring-destructive/20 dark:aria-invalid:ring-destructive/40 aria-invalid:border-destructive size-4 shrink-0 rounded-[4px] border shadow-xs transition-shadow outline-none focus-visible:ring-[3px] disabled:cursor-not-allowed disabled:opacity-50"
          data-slot="form-control"
          data-state="unchecked"
          data-testid="terms-checkbox"
          id="_r_1_-form-item"
          role="checkbox"
          type="button"
          value="on"
        >
          <div
            data-testid="mock-react-presence"
          >
            <span
              class="grid place-content-center text-current transition-none"
              data-slot="checkbox-indicator"
              data-state="unchecked"
              style="pointer-events: none;"
            >
              <svg
                aria-hidden="true"
                class="lucide lucide-check size-3.5"
                fill="none"
                height="24"
                stroke="currentColor"
                stroke-linecap="round"
                stroke-linejoin="round"
                stroke-width="2"
                viewBox="0 0 24 24"
                width="24"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M20 6 9 17l-5-5"
                />
              </svg>
            </span>
          </div>
        </button>
        <input
          aria-hidden="true"
          style="position: absolute; pointer-events: none; opacity: 0; margin: 0px; transform: translateX(-100%); width: 0px; height: 0px;"
          tabindex="-1"
          type="checkbox"
          value="on"
        />
        <div
          class="space-y-1 leading-none"
        >
          <label
            class="flex items-center gap-2 text-sm leading-none font-medium select-none group-data-[disabled=true]:pointer-events-none group-data-[disabled=true]:opacity-50 peer-disabled:cursor-not-allowed peer-disabled:opacity-50 data-[error=true]:text-destructive"
            data-error="false"
            data-slot="form-label"
            for="_r_1_-form-item"
          >
            I agree to the terms and conditions
          </label>
        </div>
      </div>
    </div>
    <button
      class="inline-flex items-center justify-center gap-2 whitespace-nowrap rounded-md text-sm font-medium transition-all disabled:pointer-events-none disabled:opacity-50 [&_svg]:pointer-events-none [&_svg:not([class*='size-'])]:size-4 shrink-0 [&_svg]:shrink-0 outline-none focus-visible:border-ring focus-visible:ring-ring/50 focus-visible:ring-[3px] aria-invalid:ring-destructive/20 dark:aria-invalid:ring-destructive/40 aria-invalid:border-destructive bg-primary text-primary-foreground hover:bg-primary/90 h-9 px-4 py-2 has-[>svg]:px-3 w-full cursor-pointer"
      data-slot="button"
      data-testid="proceed-to-payment-btn"
      type="submit"
    >
      Proceed to Payment
    </button>
  </form>
</div>
`;
